Closed Bug 1336988 Opened 8 years ago Closed 8 years ago

Crash in JSAutoCompartment::JSAutoCompartment | mozilla::dom::CallbackObjectHolderBase::ToXPCOMCallback

Categories

(Core :: DOM: Core & HTML, defect)

53 Branch
x86
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox51 --- unaffected
firefox52 --- unaffected
firefox53 --- fixed
firefox54 --- fixed

People

(Reporter: marcia, Assigned: kmag)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-c87b6e5a-4049-4668-a11e-517642170206. ============================================================= Seen while looking at Aurora crash stats - this crash is present on nightly as well: http://bit.ly/2kK4blD. On Aurora crashes started with the 20170204004003 build. Possible regression range: https://hg.mozilla.org/releases/mozilla-aurora/pushloghtml?fromchange=ed726703c08c7a0398d349efaded8bdea25c46ff&tochange=38f8808782c3209051b97de2ae3ea8c6a535e01a
Regression from bug 1273251 I think.
Blocks: 1273251
Flags: needinfo?(kmaglione+bmo)
(I think the regression range isn't right)
(In reply to Olli Pettay [:smaug] from comment #2) > (I think the regression range isn't right) Thanks smaug - you are right - the Socorro search did not pick up the all the crashes. The correct regression window on mozilla central is: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=96cb95af530477edb66ae48d98c18533476e57bb&tochange=aa3e49299a3aa5cb0db570532e3df9e75d30c2d1 which has that bug in the range.
Assignee: nobody → kmaglione+bmo
Flags: needinfo?(kmaglione+bmo)
Crash Signature: [@ JSAutoCompartment::JSAutoCompartment | mozilla::dom::CallbackObjectHolderBase::ToXPCOMCallback] → [@ JSAutoCompartment::JSAutoCompartment | mozilla::dom::CallbackObjectHolderBase::ToXPCOMCallback] [@ JSAutoCompartment::JSAutoCompartment | mozilla::dom::CallbackObjectHolderBase::ToXPCOMCallback const ]
Comment on attachment 8834091 [details] Bug 1336988: Correctly handle dead callback objects when iterating over event listeners. https://reviewboard.mozilla.org/r/110164/#review113396
Attachment #8834091 - Flags: review?(peterv) → review+
Pushed by maglione.k@gmail.com: https://hg.mozilla.org/integration/autoland/rev/db46b66a8c3b Correctly handle dead callback objects when iterating over event listeners. r=peterv
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Please request Aurora approval on this when you get a chance.
Flags: needinfo?(kmaglione+bmo)
Comment on attachment 8834091 [details] Bug 1336988: Correctly handle dead callback objects when iterating over event listeners. Approval Request Comment [Feature/Bug causing the regression]: Bug 1273251 [User impact if declined]: This bug causes crashes in certain corner cases when extensions are being debugged. [Is this code covered by automated tests?]: Yes. [Has the fix been verified in Nightly?]: No. [Needs manual test from QE? If yes, steps to reproduce]: No, automated tests should be sufficient. [List of other uplifts needed for the feature/fix]: None. [Is the change risky?]: Low-risk. [Why is the change risky/not risky?]: This simply adds null checks to fix the handling of dead event listeners in certain corner cases. [String changes made/needed]: None.
Flags: needinfo?(kmaglione+bmo)
Attachment #8834091 - Flags: approval-mozilla-aurora?
Comment on attachment 8834091 [details] Bug 1336988: Correctly handle dead callback objects when iterating over event listeners. Fix a crash. Aurora53+.
Attachment #8834091 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: