Bug 1336988: Correctly handle dead callback objects when iterating over event listeners. r=peterv

MozReview-Commit-ID: 5vGlPL1p3uh

--HG--
extra : rebase_source : 7e33d93472faa1c047361addf8b15f8a78639255